--- a/src/utils/opening/opening.scss
+++ b/src/utils/opening/opening.scss
@@ -6,13 +6,13 @@
   .opening-title {
     font-size: 45px;
     font-weight: normal;
-    margin-bottom: 22px;
-    color: inherit;
+    margin-bottom: 12px;
+    color: #000000;
   }
 
   .opening-subtitle {
     font-size: 22px;
     font-weight: normal;
-    color: inherit;
+    color: #374050;
   }
 }
